feat: added paddle checkout (#32)
* feat: [wip] added paddle checkout

* refactor: updated hu pricing data

* feat: added get pricing from paddle

* feat: added hu support

* feat: added payment page

* qms to original & go cardless has paddle plans

* refactor: hu page go-cardless

* feat: rmv contact form

* feat: let's talk linking

* feat: added login with frappe cloud

* feat: updated with new auth flow

* feat: erp next auth

* fix: site creation after math

* rmv: event console logs

* fix: updating regex for signin email id

* fix: updated login condition

* fix: dashboard flow

* fix: dashboard flow

* fix: dashboard button disabled

* feat: updated prettier file

* feat: added loading state

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -118,5 +118,21 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 			//@ts-expect-error
 			mt("send", "pageview");
 		</script>
+		<script src="https://cdn.paddle.com/paddle/v2/paddle.js" is:inline></script>
+		<script>
+    //@ts-expect-error
+    Paddle.Environment.set('sandbox');
+    //@ts-expect-error
+    Paddle.Setup({
+      token: 'test_748ec980e5b1b0f1b603b7d3310',
+      checkout: {
+        settings: {
+          displayMode: "overlay",
+          theme: "light",
+          locale: "en"
+        }
+      },
+    });
+		</script>
 	</body>
 </html>
