--- a/src/pages/gocardless.astro
+++ b/src/pages/gocardless.astro
@@ -2,9 +2,90 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import NewsLetter from "@components/EmailForm.astro";
-import Link from "@components/ui/link.astro";
+import Pricing from "@components/gocardless-pricing.astro";
 changeLanguage("en");
+
+const productID1 = "pro_01hg6hk98k3v31xs1b09mzae84"
+const productID2 = "pro_01hg6hcxvf56czc2kr4z7j1g0a"
+const productID3 = "pro_01hg12gak6ha3dhyzzjat6rcdm"
+interface PaddleProduct {
+    "id": string,
+    "product_id":string,
+    "description": string,
+    "name": string,
+    "billing_cycle": {
+      "interval": string,
+      "frequency": number,
+    },
+    "trial_period": null | any,
+    "tax_mode": string,
+    "unit_price": {
+      "amount": string,
+      "currency_code": string,
+    },
+    "unit_price_overrides": any[],
+    "custom_data": null | any,
+    "status": string,
+    "quantity": {
+      "minimum": number,
+      "maximum": number,
+    },
+    "import_meta": null | any
+}
+
+const headersList = {
+ "Accept": "*/*",
+ "Authorization": "Bearer df292b82363ffc09d5df591e6d0ed824ce3b2bf4d6626b8b6a"
+}
+
+const response = await fetch("https://sandbox-api.paddle.com/prices", {
+  method: "GET",
+  headers: headersList
+});
+
+const responseFromPaddle = await response.text();
+
+const data = JSON.parse(responseFromPaddle).data.filter((item: PaddleProduct) => item.status === "active" && item.product_id === productID1 || productID2 || productID3) as PaddleProduct[];
+
+
+const pricingData = [
+  {
+    name: "Simple",
+    price: "€299",
+    popular: false,
+    features: ["Monthly fee/location", "Unlimited user", "Unlimited guest", "Unlimited kiosk", "Unlimited display", "Unlimited traffic*"],
+    button: {
+      text: "Let's talk!",
+      link: "path_header.primary_button_text",
+    },
+    paddlePriceId: data[2].id,
+    quantity: 1,
+  },
+  {
+    name: "Standard",
+    price: "€599",
+    popular: true,
+    features: ["Simple features plus:", "API access to integrate", "Push notification"],
+    button: {
+      text: "Let's talk!",
+      link: "path_header.primary_button_text",
+    },
+    paddlePriceId: data[1].id,
+    quantity: 1,
+  },
+  {
+    name: "Premium",
+    price: "Custom",
+    popular: false,
+    features: ["Standard features plus:", "Extra resources", "Customization", "Priority support", "Local installation & offline access"],
+    button: {
+      text: "Let's talk!",
+      link: "path_header.primary_button_text",
+    },
+    paddlePriceId: data[0].id,
+    quantity: 1,
+  },
+];
 ---
 
 <Layout lang="en" title="ERPNext GoCardless Bank Integration">
@@ -15,9 +96,7 @@ changeLanguage("en");
 					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext GoCardless Bank Integration</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Automatic synchronization of bank transactions.</h2>
 					<div>
-						<Link href="/contact">
-							Let's talk!
-						</Link>
+            <a href="#pricing" class="rounded-md text-sm font-semibold transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 px-4 py-2.5 text-center bg-primaryBlue outline-2 dark:bg-gray-100 hover:opacity-80 dark:hover:bg-white focus-visible:bg-stone-500 dark:focus-visible:bg-gray-100 text-white dark:text-black border-transparent active:outline shadow-sm">Let's talk</a>
 					</div>
 				</div>
         <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
@@ -60,10 +139,18 @@ changeLanguage("en");
 						With this method, we do not restrict the submission of your own code, but we do not provide access to the Frappe Cloud account.
 					</p>
 				</section>				
-				<section id="contact-form-2">
-					<NewsLetter />
-				</section>
 			</div>
+		<section>
+			<div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-20" id="pricing" >
+				{pricingData.map((item, index) => (
+					<Pricing
+						key={index}
+						plan={item}
+					/>
+				))}
+			</div>
+		</section>
+
 		</div>
 	</Container>
 </Layout>
