--- a/src/pages/hu/gocardless.astro
+++ b/src/pages/hu/gocardless.astro
@@ -4,7 +4,91 @@ import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
 import NewsLetter from "@components/EmailFormhu.astro";
 import Link from "@components/ui/link.astro";
+import Pricing from "@components/gocardless-pricing.astro";
+
 changeLanguage("hu");
+
+const productID1 = "pro_01hg6hk98k3v31xs1b09mzae84"
+const productID2 = "pro_01hg6hcxvf56czc2kr4z7j1g0a"
+const productID3 = "pro_01hg12gak6ha3dhyzzjat6rcdm"
+interface PaddleProduct {
+    "id": string,
+    "product_id":string,
+    "description": string,
+    "name": string,
+    "billing_cycle": {
+      "interval": string,
+      "frequency": number,
+    },
+    "trial_period": null | any,
+    "tax_mode": string,
+    "unit_price": {
+      "amount": string,
+      "currency_code": string,
+    },
+    "unit_price_overrides": any[],
+    "custom_data": null | any,
+    "status": string,
+    "quantity": {
+      "minimum": number,
+      "maximum": number,
+    },
+    "import_meta": null | any
+}
+
+const headersList = {
+ "Accept": "*/*",
+ "Authorization": "Bearer df292b82363ffc09d5df591e6d0ed824ce3b2bf4d6626b8b6a"
+}
+
+const response = await fetch("https://sandbox-api.paddle.com/prices", {
+  method: "GET",
+  headers: headersList
+});
+
+const responseFromPaddle = await response.text();
+
+const data = JSON.parse(responseFromPaddle).data.filter((item: PaddleProduct) => item.status === "active" && item.product_id === productID1 || productID2 || productID3) as PaddleProduct[];
+
+
+const pricingData = [
+  {
+    name: "Simple",
+    price: "€299",
+    popular: false,
+    features: ["Havidíj/lokáció", "Korlátlan felhasználó", "Korlátlan vendég", "Korlátlan kiosk", "Korlátlan kijelző", "Korlátlan forgalom*"],
+    button: {
+      text: "Beszéljünk!",
+      link: "/hu/kapcsolat",
+    },
+    paddlePriceId: data[2].id,
+    quantity: 1,
+  },
+  {
+    name: "Standard",
+    price: "€599",
+    popular: true,
+    features: ["Minden a Simple csomagból, plusz:", "API hozzáférés integrációkhoz", "Leküldött értesítés (Push notification)"],
+    button: {
+      text: "Beszéljünk!",
+      link: "/hu/kapcsolat",
+    },
+    paddlePriceId: data[1].id,
+    quantity: 1,
+  },
+  {
+    name: "Premium",
+    price: "Custom",
+    popular: false,
+    features: ["Minden a Standard csomagból, plusz:", "Extra erőforrás", "Egyedi igények megvalósítása", "Extra támogatás", "Helyi telepítés & Offline hozzáférés"],
+    button: {
+      text: "Beszéljünk!",
+      link: "/hu/kapcsolat",
+    },
+    paddlePriceId: data[0].id,
+    quantity: 1,
+  },
+];
 ---
 
 <Layout lang="hu" title="ERPNext GoCardless Bank Integráció ">
@@ -15,9 +99,7 @@ changeLanguage("hu");
 					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext GoCardless bank integráció</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Bankszámlatranzakciók szinkronizációja automatikusan.</h2>
 				<div>
-					<Link href="/hu/kapcsolat">
-						Beszéljünk!
-					</Link>
+            <a href="#pricing" class="rounded-md text-sm font-semibold transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 px-4 py-2.5 text-center bg-primaryBlue outline-2 dark:bg-gray-100 hover:opacity-80 dark:hover:bg-white focus-visible:bg-stone-500 dark:focus-visible:bg-gray-100 text-white dark:text-black border-transparent active:outline shadow-sm">Beszéljünk!</a>
 				</div>
 				</div>
         <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
@@ -56,11 +138,19 @@ changeLanguage("hu");
 						Ezzel a megoldással tudjuk biztosítani, hogy amíg az előfizetés él, addig az ERPNext GoCardless app elérhető az adott ERPNext gépen és használható a bankszinkronizáció, de a forráskódhoz nem biztosítunk hozzáférést és a tranzakciók nem is a mennek keresztül a mi szervereinken. <br><br>
 						A GoCardless előfizetés lemondásával - az ERPNext előfizetés megtartása mellett - a rendszer tovább haszanálható és a korábbi tranzakciók is megmaradnak, csak új szinkronizálás nem indítható. Az ERPNext előfieztés lemondásával ugyan az ERPNext sem lesz elérhető, de a nyílt forráskódnak és a biztonsági mentésnek köszönhetően az akár szabadon elköltöztethető, így nincs kockázat. <br><br>
 						Ezzel módszerrel nem korlátozzuk a saját kód bejuttatását, viszont a Frappe Cloud fiókhoz nem adunk hozzáférést. 
-				</section>				
-				<section id="contact-form-2">
-					<NewsLetter />
-				  </section>
+				</section>
 			</div>
+
+		<section>
+			<div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-20" id="pricing" >
+				{pricingData.map((item, index) => (
+					<Pricing
+						key={index}
+						plan={item}
+					/>
+				))}
+			</div>
+		</section>
 		</div>
 	</Container>
 </Layout>
