--- a/src/pages/gocardless.astro
+++ b/src/pages/gocardless.astro
@@ -161,7 +161,11 @@ If you require a larger plan, please inform us, as all the Frappe Cloud plans ar
 				))}
 			</div>
 		</section>
-
+    <section>
+      <div class="px-5 py-5">
+      <span class="dark:text-white text-black "><center>The above-listed prices are monthly fees, exclusive of VAT.</center></span>
+    </div>
+    </section>
 		</div>
 	</Container>
 </Layout>
