[UPD] page konyveles

--- a/src/pages/hu/konyveles.astro
+++ b/src/pages/hu/konyveles.astro
@@ -6,7 +6,7 @@ import NewsLetter from "@components/EmailFormhu.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="hu" title="Könyvelést">
+<Layout lang="hu" title="Könyvelés">
 	<Container>
 		<div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
