feat: rmv login

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -8,7 +8,7 @@ changeLanguage("en");
 ---
 
 <Layout title="Login" lang="en">
-	<Container>
-		<Signin />
-	</Container>
+  <Container>
+    <span></span>
+  </Container>
 </Layout>
